# condocombat

./: .env.example
.github/workflows/: backend.yaml  deploy-landing.yml  frontend.yaml
backend/: Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
backend/__tests__/: test_models.py  test_websocket.py
backend/__tests__/test_repositories/: test_condominio_repo.py  test_rivalidade_repo.py
backend/__tests__/test_routers/: test_condominio_api.py
backend/__tests__/test_services/: test_condominio_service.py
backend/app/models/: apartamento.py  condominio.py  morador.py  ocorrencia.py  rivalidade.py
backend/app/services/: ws_manager.py
docs/: devopeiros-pitch.html
docs/desafio1/: README.github.md  README.gitlab.md
docs/desafio2/: README.github.md  README.gitlab.md
frontend/: Dockerfile
